change query string actor request in api docs
