# storage/api-docs/api-docs.json
@@ -155,12 +155,12 @@
                         "application/json": {
                             "schema": {
                                 "required": [
-                                    "name",
+                                    "fullname",
                                     "slug",
                                     "avatar"
                                 ],
                                 "properties": {
-                                    "name": {
+                                    "fullname": {
                                         "type": "string"
                                     },
                                     "slug": {
@@ -173,7 +173,7 @@
                                 "type": "string"
                             },
                             "example": {
-                                "name": "hailong",
+                                "fullname": "hailong",
                                 "slug": "hai-long",
                                 "avatar": "anh_cua_toi.jpg"
                             }
@@ -244,12 +244,12 @@
                         "application/json": {
                             "schema": {
                                 "required": [
-                                    "name",
+                                    "fullname",
                                     "slug",
                                     "avatar"
                                 ],
                                 "properties": {
-                                    "name": {
+                                    "fullname": {
                                         "type": "string"
                                     },
                                     "slug": {
@@ -262,7 +262,7 @@
                                 "type": "string"
                             },
                             "example": {
-                                "name": "longhai",
+                                "fullname": "longhai",
                                 "slug": "long-hai",
                                 "avatar": "anh_moi_doi.png"
                             }
